--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>JavaScript</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description" />
     <meta
@@ -27,6 +27,7 @@
         },
         repo: "https://github.com/yangxueyou/xueyou_javascript",
         loadSidebar: true,
+        subMaxLevel: 6,
       };
     </script>
     <!-- Docsify v4 -->
